fix: ajuste en el swagger
