# controllers/replica.go
@@ -1,6 +1,7 @@
 package controllers
 
 import (
+	"encoding/json"
 	"fmt"
 	"strconv"
 
@@ -11,13 +12,13 @@ import (
 	"github.com/udistrital/novedades_mid/models"
 )
 
-// ArgoReplicaController operations for ArgoReplica
-type ArgoReplicaController struct {
+// ReplicaController operations for Replica
+type ReplicaController struct {
 	beego.Controller
 }
 
 // URLMapping ...
-func (c *ArgoReplicaController) URLMapping() {
+func (c *ReplicaController) URLMapping() {
 	c.Mapping("Post", c.Post)
 	c.Mapping("GetOne", c.GetOne)
 	c.Mapping("GetAll", c.GetAll)
@@ -27,12 +28,43 @@ func (c *ArgoReplicaController) URLMapping() {
 
 // Post ...
 // @Title Create
-// @Description create ArgoReplica
-// @Param	body		body 	models.ArgoReplica	true		"body for ArgoReplica content"
-// @Success 201 {object} models.ArgoReplica
+// @Description create Replica
+// @Param	body		body 	models.Replica	true		"body for Replica content"
+// @Success 201 {object} models.Replica
 // @Failure 403 body is empty
 // @router / [post]
-func (c *ArgoReplicaController) Post() {
+func (c *ReplicaController) Post() {
+
+	var informacionReplica map[string]interface{}
+	var alertErr models.Alert
+	alertas := append([]interface{}{"Response:"})
+
+	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &informacionReplica); err == nil {
+
+		result, err1 := 
+
+		if err1 == nil {
+			alertErr.Type = "OK"
+			alertErr.Code = "200"
+			alertErr.Body = result
+		} else {
+			alertErr.Type = "error"
+			alertErr.Code = "400"
+			alertas = append(alertas, err1)
+			alertErr.Body = alertas
+			c.Ctx.Output.SetStatus(400)
+		}
+
+	} else {
+		alertErr.Type = "error"
+		alertErr.Code = "400"
+		alertas = append(alertas, err.Error())
+		alertErr.Body = alertas
+		c.Ctx.Output.SetStatus(400)
+	}
+
+	c.Data["json"] = alertErr
+	c.ServeJSON()
 
 	go models.Temporizador()
 	c.ServeJSON()
@@ -51,12 +83,12 @@ func (c *ArgoReplicaController) Post() {
 
 // GetOne ...
 // @Title GetOne
-// @Description get ArgoReplica by id
+// @Description get Replica by id
 // @Param	id		path 	string	true		"The key for staticblock"
-// @Success 200 {object} models.ArgoReplica
+// @Success 200 {object} models.Replica
 // @Failure 403 :id is empty
 // @router /:id [get]
-func (c *ArgoReplicaController) GetOne() {
+func (c *ReplicaController) GetOne() {
 	var resultjbpm map[string]interface{}
 	var novedad_replicaCollection map[string]interface{}
 	var novedad []interface{}
@@ -142,39 +174,39 @@ func (c *ArgoReplicaController) GetOne() {
 
 // GetAll ...
 // @Title GetAll
-// @Description get ArgoReplica
+// @Description get Replica
 // @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
 // @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
 // @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
 // @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
 // @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
 // @Param	offset	query	string	false	"Start position of result set. Must be an integer"
-// @Success 200 {object} models.ArgoReplica
+// @Success 200 {object} models.Replica
 // @Failure 403
 // @router / [get]
-func (c *ArgoReplicaController) GetAll() {
+func (c *ReplicaController) GetAll() {
 
 }
 
 // Put ...
 // @Title Put
-// @Description update the ArgoReplica
+// @Description update the Replica
 // @Param	id		path 	string	true		"The id you want to update"
-// @Param	body		body 	models.ArgoReplica	true		"body for ArgoReplica content"
-// @Success 200 {object} models.ArgoReplica
+// @Param	body		body 	models.Replica	true		"body for Replica content"
+// @Success 200 {object} models.Replica
 // @Failure 403 :id is not int
 // @router /:id [put]
-func (c *ArgoReplicaController) Put() {
+func (c *ReplicaController) Put() {
 
 }
 
 // Delete ...
 // @Title Delete
-// @Description delete the ArgoReplica
+// @Description delete the Replica
 // @Param	id		path 	string	true		"The id you want to delete"
 // @Success 200 {string} delete success!
 // @Failure 403 id is empty
 // @router /:id [delete]
-func (c *ArgoReplicaController) Delete() {
+func (c *ReplicaController) Delete() {
 
 }
